Minor css fix for z-index in info-badge based on issue report number - 575

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -176,7 +176,7 @@
         right: -3px;
         font-size: 11px;
         font-weight: 400;
-        z-index: 9999;
+        z-index: 99;
         padding: 0 4px;
         border-radius: 3px;
         color: #fff;
